# cucr_worlds

./: .gitignore  README.md
cucr_worlds_hospital/: CMakeLists.txt  README.md  package.xml
cucr_worlds_hospital/launch/: full.launch
cucr_worlds_hospital/map/: hospital.bt  hospital.pgm  hospital.yaml
cucr_worlds_hospital/worlds/: hospital.world
cucr_worlds_house_museum/: CMakeLists.txt  package.xml
cucr_worlds_house_museum/launch/: empty_world.launch  full.launch
cucr_worlds_house_museum/models/museum/: model.config  model.sdf
cucr_worlds_house_museum/models/museum/meshes/: house_museum.dae
cucr_worlds_house_museum/worlds/: empty_default.world  house_museum.world
cucr_worlds_museum/: CMakeLists.txt  README.md  package.xml
cucr_worlds_museum/launch/: full.launch
cucr_worlds_museum/map/: museum.bt  museum.pgm  museum.yaml
cucr_worlds_museum/maps/: map.bt
cucr_worlds_museum/models/Scrubs/: model.sdf
cucr_worlds_museum/models/art_1/: model.config  model.sdf
cucr_worlds_museum/models/art_1/meshes/: art1.dae
cucr_worlds_museum/models/art_10/: model.config  model.sdf
cucr_worlds_museum/models/art_10/meshes/: art10.dae
cucr_worlds_museum/models/art_11/: model.config  model.sdf
cucr_worlds_museum/models/art_11/meshes/: art11.dae
cucr_worlds_museum/models/art_12/: model.config  model.sdf
cucr_worlds_museum/models/art_12/meshes/: art12.dae
cucr_worlds_museum/models/art_13/: model.config  model.sdf
cucr_worlds_museum/models/art_14/: model.config  model.sdf
cucr_worlds_museum/models/art_15/: model.config  model.sdf
cucr_worlds_museum/models/art_16/: model.config  model.sdf
cucr_worlds_museum/models/art_17/: model.config  model.sdf
cucr_worlds_museum/models/art_18/: model.config  model.sdf
cucr_worlds_museum/models/art_19/: model.config  model.sdf
cucr_worlds_museum/models/art_2/: model.config  model.sdf
cucr_worlds_museum/models/art_20/: model.config  model.sdf
cucr_worlds_museum/models/art_21/: model.config  model.sdf
cucr_worlds_museum/models/art_22/: model.config  model.sdf
cucr_worlds_museum/models/art_23/: model.config  model.sdf
cucr_worlds_museum/models/art_24/: model.config  model.sdf
cucr_worlds_museum/models/art_25/: model.config  model.sdf
cucr_worlds_museum/models/art_26/: model.config  model.sdf
cucr_worlds_museum/models/art_27/: model.config  model.sdf
cucr_worlds_museum/models/art_28/: model.config  model.sdf
cucr_worlds_museum/models/art_29/: model.config  model.sdf
cucr_worlds_museum/models/art_3/: model.config  model.sdf
cucr_worlds_museum/models/art_30/: model.config  model.sdf
cucr_worlds_museum/models/art_31/: model.config  model.sdf
cucr_worlds_museum/models/art_32/: model.config  model.sdf
cucr_worlds_museum/models/art_33/: model.config  model.sdf
cucr_worlds_museum/models/art_34/: model.config  model.sdf
cucr_worlds_museum/models/art_35/: model.config  model.sdf
cucr_worlds_museum/models/art_36/: model.config  model.sdf
cucr_worlds_museum/models/art_37/: model.config  model.sdf
cucr_worlds_museum/models/art_4/: model.config  model.sdf
cucr_worlds_museum/models/art_5/: model.config  model.sdf
cucr_worlds_museum/models/art_6/: model.config  model.sdf
cucr_worlds_museum/models/art_7/: model.config  model.sdf
cucr_worlds_museum/models/art_8/: model.config  model.sdf
cucr_worlds_museum/models/art_9/: model.config  model.sdf
cucr_worlds_museum/models/bench_1/: model.config  model.sdf
cucr_worlds_museum/models/bench_2/: model.config  model.sdf
cucr_worlds_museum/models/bench_3/: model.config  model.sdf
cucr_worlds_museum/models/bench_4/: model.config  model.sdf
cucr_worlds_museum/models/bench_5/: model.config  model.sdf
cucr_worlds_museum/models/floor_1/: model.config  model.sdf
cucr_worlds_museum/models/floor_2/: model.config  model.sdf
cucr_worlds_museum/models/museum/: model.sdf
cucr_worlds_museum/models/museum_floor/: model.config  model.sdf
cucr_worlds_museum/models/museum_sealing/: model.config  model.sdf
cucr_worlds_museum/models/person_walking/: model.sdf
cucr_worlds_museum/worlds/: empty_default.world  museum.world  museum_no_roof.world
cucr_worlds_office/: CMakeLists.txt  package.xml
cucr_worlds_office/worlds/: office.world
(+82 files in other folders)
