<?xml version="1.0"?>
<package format="2">
  <name>cucr_worlds_museum</name>
  <version>0.0.0</version>
  <description>The cucr_worlds_museum package</description>

  <maintainer email="millan-normans@cardiff.ac.uk">samn</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

  <!-- Gazebo packages -->
  <depend>rqt_gui</depend>
  <depend>rviz</depend>

</package>
