<?xml version="1.0"?>
<package format="2">
  <name>cucr_worlds_office</name>
  <version>0.0.0</version>
  <description>The cucr_worlds_office package</description>

  <maintainer email="silvas1@cardiff.ac.uk">Steven Alexander Silva Mendoza</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}/media" gazebo_model_path="${prefix}/models"/>
  </export>

</package>
